# messenger

./: AUDIO_REAME.md  CONTRIBUTING.md  README.md  l10n.yaml  pubspec.yaml
android/: build.gradle.kts
android/app/: build.gradle.kts
lib/: main.dart
lib/config/: environment.dart  theme_builder.dart  theme_options.dart
lib/constants/: app_strings.dart
lib/l10n/: app_de.arb  app_en.arb  app_es.arb  app_fr.arb  app_it.arb  app_ja.arb  app_ko.arb  app_localizations.dart  app_localizations_de.dart  app_localizations_en.dart  app_localizations_es.dart  app_localizations_fr.dart  app_localizations_it.dart  app_localizations_ja.dart  app_localizations_ko.dart  app_localizations_pl.dart  app_localizations_ru.dart  app_localizations_zh.dart  app_pl.arb  app_ru.arb  app_zh.arb
lib/models/: matrix.dart
lib/providers/: auth_notifier.dart  chat_provider.dart  service_providers.dart  settings_provider.dart  user_cache_provider.dart
lib/screens/: account_settings_screen.dart  advanced_search_screen.dart  calls_screen.dart  chat_screen.dart  chat_settings_screen.dart  contacts_screen.dart  create_chat_screen.dart  create_group_screen.dart  customization_screen.dart  dev_menu_screen.dart  dev_menu_screen_enhanced.dart  group_settings_screen.dart  home_screen.dart  login_screen.dart  main_screen.dart  profile_screen.dart  register_screen.dart  settings_screen.dart  tfa_setup_screen.dart  welcome_screen.dart
lib/services/: auth_service.dart  chat_matrix_service.dart  contacts_service.dart  group_matrix_service.dart  (+6 more)
windows/runner/: CMakeLists.txt
windows/runner/NativeThroat/: CMakeLists.txt  native_throat.cpp  native_throat.h
(+36 files in other folders)
